feat: change weekly upvote system to daily (Issue #145)
- Change upvote limit from 3/week to 3/day for higher user friction
- Rename WeeklyVotesIndicator to DailyVotesIndicator
- Update MAX_WEEKLY_UPVOTES to MAX_DAILY_UPVOTES
- Update translations (EN/ES) for daily voting messages
- Add migration 015 for daily upvote functions
- Add migration 016 to fix XP deduction on upvote removal

Closes #145

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -345,12 +345,12 @@
     "noPopularThisWeek": "No trending machines this week yet",
     "recentVisitors": "Recent visitors",
     "showOnMap": "Show on Map",
-    "votesRemaining": "{{count}} votes left this week",
-    "votesRemaining_one": "{{count}} vote left this week",
-    "noVotesLeft": "No votes left this week",
+    "votesRemaining": "{{count}} votes left today",
+    "votesRemaining_one": "{{count}} vote left today",
+    "noVotesLeft": "No votes left today",
     "upvoteSuccess": "Upvoted! +{{xp}} XP",
     "upvoteRemoved": "Upvote removed",
-    "weeklyLimitReached": "You've used all 3 weekly upvotes",
+    "dailyLimitReached": "You've used all 3 daily upvotes",
     "loginToUpvote": "Log in to upvote machines"
   },
   "legal": {
