feat: add verification trust messaging and auto-flagging (Issue #112)
- Update check-in modal with trust messaging: 'You earn +25 XP either way'
- Add 'Help us keep the map accurate' subtext to all check-ins
- Create machine_gone_reports table to track 'gone' reports
- Auto-flag machines after 2+ users report them as gone
- Add record_machine_gone_report() RPC function

Closes #112

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -212,7 +212,8 @@
       "verifyTitle": "Verify Machine",
       "question": "Is this vending machine still here?",
       "verifyQuestion": "Can you confirm this machine is still in this location?",
-      "xpReward": "You'll earn +25 XP for verifying!",
+      "xpReward": "You'll earn +25 XP either way — just be honest!",
+      "trustMessage": "Help us keep the map accurate.",
       "yesHere": "Yes, it's here!",
       "noGone": "No, it's gone",
       "tooFar": {
