Fix admin dashboard for machine submissions (#158)
- Fix date formatting to use explicit en-US locale
- Add contributor avatar and link to profile
- Add 'Open in Google Maps' button for location verification
- Display machine categories in review screen
- Show directions_hint field when present
- Add explanatory text for duplicate check (50m radius, name similarity)
- Increase bottom margin on action buttons
- Add reverse geocoding for machines without address
- Update PendingMachineCard to show categories preview

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -200,6 +200,7 @@
     "progressCount": "{{current}}/{{required}} visits",
     "copyAddress": "Copy",
     "addressCopied": "Copied!",
+    "estimatedAddress": "Estimated from coordinates",
     "popularity": {
       "hiddenGem": "Hidden Gem",
       "discovered": "Discovered",
@@ -479,14 +480,18 @@
     "queueEmpty": "All caught up!",
     "queueEmptySubtext": "No pending machines to review",
     "submittedBy": "Submitted By",
+    "viewProfile": "View profile",
     "location": "Location",
+    "openInMaps": "Open in Google Maps",
     "nearbyCheck": "Duplicate Check",
+    "duplicateExplanation": "Checks for active machines within 50m and compares name similarity to detect potential duplicates.",
     "noDuplicates": "No nearby duplicates found",
     "potentialDuplicates": "{{count}} potential duplicate(s) nearby",
     "nameMatch": "{{percent}}% match",
     "nearbyMachines": "{{count}} nearby machine(s)",
     "away": "away",
     "noDescription": "No description provided",
+    "noCategories": "No categories selected",
     "approve": "Approve",
     "reject": "Reject",
     "confirmApprove": "Approve Machine?",
