--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -200,6 +200,7 @@
     "progressCount": "{{current}}/{{required}} visitas",
     "copyAddress": "Copiar",
     "addressCopied": "¡Copiado!",
+    "estimatedAddress": "Estimado desde coordenadas",
     "popularity": {
       "hiddenGem": "Joya Oculta",
       "discovered": "Descubierta",
@@ -475,14 +476,18 @@
     "queueEmpty": "¡Todo al día!",
     "queueEmptySubtext": "No hay máquinas pendientes de revisión",
     "submittedBy": "Enviado Por",
+    "viewProfile": "Ver perfil",
     "location": "Ubicación",
+    "openInMaps": "Abrir en Google Maps",
     "nearbyCheck": "Verificación de Duplicados",
+    "duplicateExplanation": "Busca máquinas activas en un radio de 50m y compara la similitud de nombres para detectar posibles duplicados.",
     "noDuplicates": "No se encontraron duplicados cercanos",
     "potentialDuplicates": "{{count}} posible(s) duplicado(s) cercano(s)",
     "nameMatch": "{{percent}}% de coincidencia",
     "nearbyMachines": "{{count}} máquina(s) cercana(s)",
     "away": "de distancia",
     "noDescription": "Sin descripción",
+    "noCategories": "Sin categorías seleccionadas",
     "approve": "Aprobar",
     "reject": "Rechazar",
     "confirmApprove": "¿Aprobar Máquina?",
