Rework categories from 8 generic to 5 discovery-oriented (#109)
Replace drinks, food, ice-cream, coffee, and alcohol with a single
"Eats" category. Add new "Local Gems" category. Migration reassigns
existing machine_categories and cleans up duplicates.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,14 +141,11 @@
   },
   "categories": {
     "all": "All",
-    "drinks": "Drinks",
-    "food": "Food",
+    "eats": "Eats",
     "gachapon": "Gachapon",
     "weird": "Weird",
     "retro": "Retro",
-    "iceCream": "Ice Cream",
-    "coffee": "Coffee",
-    "alcohol": "Alcohol"
+    "localGems": "Local Gems"
   },
   "machine": {
     "unnamed": "Unnamed Machine",
