feat: allow users to dismiss rejected submissions from profile
- Add dismissed_at column to machines table
- Update get_user_pending_machines() RPC to exclude dismissed
- Create dismiss_rejected_machine() RPC function
- Add dismiss button UI on rejected submission cards
- Optimistic UI update on dismiss

Closes #234

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -111,6 +111,7 @@
       "message": "Are you sure you want to remove this machine from your saved list?"
     },
     "removeError": "Failed to remove machine from saved list.",
+    "dismissError": "Failed to dismiss submission.",
     "settings": "Settings",
     "language": "Language",
     "supportUs": "Support Us",
