feat(auth): add optional newsletter preference to signup and profile settings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,10 @@
     "country": "Country",
     "selectCountry": "Select Country",
     "countryHelper": "Represent your country on the global leaderboard!",
+    "newsletter": {
+      "label": "Receive newsletters and promotions via email",
+      "success": "Newsletter preference updated"
+    },
     "createAccount": "Create Account",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
