feat: show 'Last seen' instead of verification badge on map
Replace confusing Verified/Unverified badge with informative 'Last seen: X days ago' text on map preview cards.

- Shows relative time since last verification (hours/days)
- Color coded: green (≤30d), blue (31-90d), orange (>90d or never)
- Shows 'Never verified' for machines with no verification history
- Removes dependency on VERIFICATION_THRESHOLD for display

Fixes #219

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -156,7 +156,10 @@
     "visit": "{{count}} visit",
     "verifications": "{{count}} verified",
     "lastVerified": "Last verified {{date}}",
-    "neverVerified": "Not yet verified",
+    "neverVerified": "Never verified",
+    "lastSeenDays": "Seen {{count}}d ago",
+    "lastSeenHours": "Seen {{count}}h ago",
+    "lastSeenNow": "Seen recently",
     "active": "Active",
     "verified": "Verified",
     "unverified": "Unverified",
