feat: add XP estimates, distance, and sorting to Quest Log (#105)
Show estimated XP rewards and distance from user location on each
saved machine card. Add sort-by-distance and sort-by-XP pill toggles
so users can prioritize which machine to visit next.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -133,7 +133,12 @@
     "bioPlaceholder": "Cuéntanos sobre tus aventuras...",
     "updateProfile": "Actualizar Perfil",
     "updateSuccess": "¡Perfil actualizado con éxito!",
-    "updateError": "Error al actualizar el perfil."
+    "updateError": "Error al actualizar el perfil.",
+    "sortBy": "Ordenar por",
+    "sortDistance": "Distancia",
+    "sortXP": "XP",
+    "xpEstimate": "~{{xp}} XP",
+    "distanceAway": "a {{distance}}"
   },
   "map": {
     "searchPlaceholder": "Buscar máquinas...",
