--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -133,7 +133,12 @@
     "bioPlaceholder": "Tell us about your vending adventures...",
     "updateProfile": "Update Profile",
     "updateSuccess": "Profile updated successfully!",
-    "updateError": "Failed to update profile."
+    "updateError": "Failed to update profile.",
+    "sortBy": "Sort by",
+    "sortDistance": "Distance",
+    "sortXP": "XP",
+    "xpEstimate": "~{{xp}} XP",
+    "distanceAway": "{{distance}} away"
   },
   "map": {
     "searchPlaceholder": "Search machines...",
