fix: address Copilot review feedback
- Clear userLocation on permission denied or error to prevent stale
  distance values, and log location errors
- Reuse existing machine.away translation key instead of duplicate
  profile.distanceAway
- Remove unused sortBy and distanceAway translation keys

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -134,11 +134,9 @@
     "updateProfile": "Update Profile",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile.",
-    "sortBy": "Sort by",
     "sortDistance": "Distance",
     "sortXP": "XP",
-    "xpEstimate": "~{{xp}} XP",
-    "distanceAway": "{{distance}} away"
+    "xpEstimate": "~{{xp}} XP"
   },
   "map": {
     "searchPlaceholder": "Search machines...",
