feat: differentiate verify prompt for never-verified vs stale machines
Show distinct indigo/purple banner with "Be First!" CTA for machines
that have never been verified, vs the existing amber banner for stale
(>90d) machines. Also use indigo color for "Never verified" on preview
cards, and gate the Add Photo button behind having visited/verified.

Closes #244

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -191,6 +191,8 @@
     "uploadError": "Error al subir la foto.",
     "stalePrompt": "Esta máquina no ha sido verificada recientemente. ¿Puedes confirmar que sigue aquí?",
     "verifyNow": "Verificar Ahora",
+    "neverVerifiedPrompt": "Nadie ha verificado esta máquina todavía. ¡Sé el primero en confirmar que está aquí!",
+    "beFirstToVerify": "¡Sé el Primero!",
     "stats": {
       "visits": "Visitas",
       "verified": "Verificado",
