--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -191,6 +191,8 @@
     "uploadError": "Failed to upload photo.",
     "stalePrompt": "This machine hasn't been verified recently. Can you help confirm it's still here?",
     "verifyNow": "Verify Now",
+    "neverVerifiedPrompt": "No one has verified this machine yet. Be the first to confirm it's here!",
+    "beFirstToVerify": "Be First!",
     "stats": {
       "visits": "Visits",
       "verified": "Verified",
