feat: allow multiple photo selection when adding a new machine
- Fix hang in simulator by avoiding double picker calls\n- Support up to 2 photos when adding a machine\n- Enable multiple selection in gallery\n- Maintain original UI style with large images

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -244,6 +244,8 @@
     "cancel": "Cancelar",
     "takePhoto": "Tomar Foto",
     "chooseFromGallery": "Elegir de la Galería",
+    "takeAnotherPhoto": "Tomar otra foto",
+    "chooseAnotherFromGallery": "Elegir otra de la galería",
     "processingImage": "Procesando imagen...",
     "tapToRemove": "Toca para eliminar",
     "name": "Nombre",
@@ -261,8 +263,12 @@
     "latitude": "Latitud",
     "longitude": "Longitud",
     "toggleDevMode": "Alternar modo desarrollador para entrada manual de ubicación",
+    "photos": "Fotos",
+    "primary": "Principal",
+    "photoRequiredHint": "Por favor, agrega al menos una foto",
+    "maxPhotosReached": "Máximo de {{count}} fotos alcanzado",
     "validation": {
-      "photoRequired": "Por favor toma o selecciona una foto.",
+      "photoRequired": "Por favor, agrega al menos una foto.",
       "nameRequired": "Por favor ingresa un nombre para la máquina.",
       "descriptionRequired": "Por favor añade una descripción.",
       "locationRequired": "Por favor espera la ubicación GPS o habilita los servicios de ubicación.",
