feat: implement deep linking support for machine sharing (#121)
- Support loading machine data by ID in detail screen\n- Include deep link URL in shareable card\n- Add translations for sharing messages

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -348,7 +348,8 @@
     "shareToSocial": "Share to Social",
     "maybeLater": "Maybe later",
     "notAvailable": "Sharing is not available on this device",
-    "dialogTitle": "Share your vending machine discovery!"
+    "dialogTitle": "Share your vending machine discovery!",
+    "message": "Check out this vending machine I found on JidouNavi: {{name}}"
   },
   "discover": {
     "title": "Discover",
