feat: implement professional referral system (#188)
- Add referral_code and referred_by_id to profiles\n- Implement automated referral capturing via /invite/[code] deep link\n- Auto-award 100 XP to referrer on friend signup via DB trigger\n- Add 'Team Hunt' badge awarded to both after friend's 3rd visit\n- UI: Added invitation card to profile with sharing capabilities\n- Extended Profile types and added localization

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -136,7 +136,11 @@
     "updateError": "Error al actualizar el perfil.",
     "sortDistance": "Distancia",
     "sortXP": "XP",
-    "xpEstimate": "~{{xp}} XP"
+    "xpEstimate": "~{{xp}} XP",
+    "inviteTitle": "Invita a un amigo",
+    "inviteDescription": "¡Invita a tus amigos a JidouNavi y gana 100 XP cuando se registren!",
+    "inviteButton": "Compartir link de invitación",
+    "inviteLinkCopied": "¡Link de invitación copiado al portapapeles!"
   },
   "map": {
     "searchPlaceholder": "Buscar máquinas...",
