style: improve invitation card width and update shared message
- Set invite card width to 100% for consistency\n- Added friendly invitation message for sharing\n- Updated English and Spanish translations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,6 +139,7 @@
     "xpEstimate": "~{{xp}} XP",
     "inviteTitle": "Invite a Friend",
     "inviteDescription": "Invite your friends to JidouNavi and earn 100 XP when they sign up!",
+    "inviteMessage": "Your friend invited you to JidouNavi! Join to discover Japan's most unique vending machines.",
     "inviteButton": "Share Invite Link",
     "inviteLinkCopied": "Invite link copied to clipboard!"
   },
