--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -139,6 +139,7 @@
     "xpEstimate": "~{{xp}} XP",
     "inviteTitle": "Invita a un amigo",
     "inviteDescription": "¡Invita a tus amigos a JidouNavi y gana 100 XP cuando se registren!",
+    "inviteMessage": "¡Tu amigo te invitó a JidouNavi! Únete para descubrir las máquinas expendedoras más únicas de Japón.",
     "inviteButton": "Compartir link de invitación",
     "inviteLinkCopied": "¡Link de invitación copiado al portapapeles!"
   },
