--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -129,11 +129,12 @@
     "pendingHint": "Under review by our team",
     "editProfile": "Edit Profile",
     "displayName": "Display Name",
-    "bio": "Bio",
-    "bioPlaceholder": "Tell us about your vending adventures...",
     "updateProfile": "Update Profile",
     "updateSuccess": "Profile updated successfully!",
     "updateError": "Failed to update profile.",
+    "nameChangeCooldown": "You can change your name again in {{days}} days",
+    "unsaveConfirmTitle": "Remove from Quest Log",
+    "unsaveConfirmMessage": "Remove this machine from your quest log?",
     "sortDistance": "Distance",
     "sortXP": "XP",
     "xpEstimate": "~{{xp}} XP",
