--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -129,11 +129,12 @@
     "pendingHint": "En revisión por nuestro equipo",
     "editProfile": "Editar Perfil",
     "displayName": "Nombre a mostrar",
-    "bio": "Biografía",
-    "bioPlaceholder": "Cuéntanos sobre tus aventuras...",
     "updateProfile": "Actualizar Perfil",
     "updateSuccess": "¡Perfil actualizado con éxito!",
     "updateError": "Error al actualizar el perfil.",
+    "nameChangeCooldown": "Puedes cambiar tu nombre en {{days}} días",
+    "unsaveConfirmTitle": "Eliminar del Registro",
+    "unsaveConfirmMessage": "¿Eliminar esta máquina de tu registro de misiones?",
     "sortDistance": "Distancia",
     "sortXP": "XP",
     "xpEstimate": "~{{xp}} XP",
