feat: machine detail pixel art rework + activity feed
Rework machine detail page to use consistent pixel art design language
across all cards and components. Add recent activity feed showing last
5 visitors with avatars and timestamps.

- Replace Ionicons with pixel art assets (location, bookmark, discover)
- Apply pixel borders, shadows, and fonts to all cards
- Move report flag into title card as compact red icon
- Make status row more compact
- Add activity feed section with visitor avatars
- Add translation keys for activity feed (en/es)
- Profile and ShareableCard pixel art icon replacements

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -215,6 +215,8 @@
     "visitMoreToUnlock": "Visit {{count}} more to unlock!",
     "thisWillUnlock": "This will unlock it!",
     "progressCount": "{{current}}/{{required}} visits",
+    "recentActivity": "Recent Activity",
+    "visitedTimeAgo": "visited {{time}}",
     "copyAddress": "Copy",
     "addressCopied": "Copied!",
     "estimatedAddress": "Estimated from coordinates",
