fix: extract shared EarnedBadgeRow component and add FriendCard accessibility
Address PR #257 review comments:
- Extract EarnedBadgeRow shared component to deduplicate badge rendering
  between BadgeShowcase and user profile screen
- Add accessibilityRole and accessibilityLabel to FriendCard profile pressable

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -476,7 +476,8 @@
     "searchToAdd": "Search for users to add as friends",
     "searchResults": "Search Results",
     "searching": "Searching...",
-    "noUsersFound": "No users found for \"{{query}}\""
+    "noUsersFound": "No users found for \"{{query}}\"",
+    "openProfile": "Open profile"
   },
   "leaderboard": {
     "title": "Leaderboard",
