fix: address Copilot review feedback on badge requirements
- Add i18next plural forms (_one/_other) for all requirement strings
  so count=1 renders correctly (e.g. "Visit 1 machine" not "1 machines")
- Add category slug-to-translation-key mapping so hyphenated slugs
  like "local-gems" resolve to the correct i18n key "categories.localGems"

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -316,11 +316,16 @@
     "viewAll": "Ver Todas las Insignias",
     "awesome": "¡Genial!",
     "requirement": {
-      "visit_count": "Visita {{count}} máquinas",
-      "contribution_count": "Añade {{count}} máquinas al mapa",
-      "category_visit": "Visita {{count}} máquinas de {{category}}",
-      "verification_count": "Verifica {{count}} máquinas",
-      "referral_count": "Invita a {{count}} amigos",
+      "visit_count_one": "Visita {{count}} máquina",
+      "visit_count_other": "Visita {{count}} máquinas",
+      "contribution_count_one": "Añade {{count}} máquina al mapa",
+      "contribution_count_other": "Añade {{count}} máquinas al mapa",
+      "category_visit_one": "Visita {{count}} máquina de {{category}}",
+      "category_visit_other": "Visita {{count}} máquinas de {{category}}",
+      "verification_count_one": "Verifica {{count}} máquina",
+      "verification_count_other": "Verifica {{count}} máquinas",
+      "referral_count_one": "Invita a {{count}} amigo",
+      "referral_count_other": "Invita a {{count}} amigos",
       "special": "Completa un desafío especial"
     },
     "items": {
