fix: shorten Spanish translations and fix missing keys/accents
Shorten long Spanish strings that overflow constrained UI areas:
profile stats, level pill, badge cards, action buttons, quest log
header, and stats grid. Add missing keys (common.dismiss, weekly
champion labels). Fix missing accents and punctuation.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,7 +16,8 @@
     "unsave": "Unsave",
     "remove": "Remove",
     "back": "Back",
-    "user": "User"
+    "user": "User",
+    "dismiss": "Dismiss"
   },
   "auth": {
     "login": "Log In",
