feat: game-like XP bar with animated fill, tiered level colors, and level-up detection
Extract shared XPProgressBar component used by both profile screens.
Level badge now changes color by tier (gray → green → blue → purple → gold).
Bar animates from 0 to current XP on mount. "N XP to next level" subtitle
added below bar. Level-up detection in addXP/updateLocalXP surfaces in
success modals across check-in, photo upload, add-machine, and upvote flows.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -148,7 +148,9 @@
     "inviteDescription": "Invite your friends to JidouNavi and earn 100 XP when they sign up!",
     "inviteMessage": "Your friend invited you to JidouNavi! Join to discover Japan's most unique vending machines.",
     "inviteButton": "Share Invite Link",
-    "inviteLinkCopied": "Invite link copied to clipboard!"
+    "inviteLinkCopied": "Invite link copied to clipboard!",
+    "xpToNext": "{{xp}} XP to next level",
+    "levelUp": "Level Up! You're now Level {{level}}"
   },
   "map": {
     "searchPlaceholder": "Search machines...",
