--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -148,7 +148,9 @@
     "inviteDescription": "¡Invita a tus amigos a JidouNavi y gana 100 XP cuando se registren!",
     "inviteMessage": "¡Tu amigo te invitó a JidouNavi! Únete para descubrir las máquinas expendedoras más únicas de Japón.",
     "inviteButton": "Compartir link de invitación",
-    "inviteLinkCopied": "¡Link de invitación copiado al portapapeles!"
+    "inviteLinkCopied": "¡Link de invitación copiado al portapapeles!",
+    "xpToNext": "{{xp}} XP para el siguiente nivel",
+    "levelUp": "¡Subiste al Nivel {{level}}!"
   },
   "map": {
     "searchPlaceholder": "Buscar máquinas...",
