fixed copilot comments

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -46,7 +46,7 @@
     "dontHaveAccount": "¿No tienes una cuenta?",
     "alreadyHaveAccount": "¿Ya tienes una cuenta?",
     "subtitle": "Descubre Japón, una máquina expendedora a la vez.",
-    "welcomeMessage": "\"Bienvenido — vamos a explorar las máquinas expendedoras más únicas de Japón.",
+    "welcomeMessage": "Bienvenido — vamos a explorar las máquinas expendedoras más únicas de Japón.",
     "createYourAccount": "Crea tu cuenta",
     "sendResetLink": "Enviar enlace",
     "forgotPasswordTitle": "¿Olvidaste tu contraseña?",
