fixed word buy to treat us to comply with app stores autoflag

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,7 +126,7 @@
     "language": "Language",
     "supportUs": "Support Us",
     "supportDescription": "JidouNavi is built by two passionate developers who personally visited and photographed many of these machines. Your support helps us keep the app alive and continue building new features for the community.",
-    "supportButton": "Buy Us a Coffee",
+    "supportButton": "Treat Us to a Coffee",
     "supportLinkError": "Could not open the support link. Please try again later.",
     "mySubmissions": "My Submissions",
     "pendingReview": "Pending",
