feat: reorganize settings modal into grouped sections
Group settings items into labeled sections (Account, Content, Community,
Legal) with section headers for better scannability. Move read-only email
field from main list into Edit Profile sub-screen. Place destructive
actions (Logout, Delete Account) at the bottom with visual separation.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -156,7 +156,11 @@
     "feedbackSuccess": "Thank you for your feedback! We really appreciate it.",
     "feedbackError": "Failed to send feedback. Please try again.",
     "xpToNext": "{{xp}} XP to next level",
-    "levelUp": "Level Up! You're now Level {{level}}"
+    "levelUp": "Level Up! You're now Level {{level}}",
+    "sectionAccount": "Account",
+    "sectionContent": "Content",
+    "sectionCommunity": "Community",
+    "sectionLegal": "Legal"
   },
   "map": {
     "searchPlaceholder": "Search machines...",
