--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -156,7 +156,11 @@
     "feedbackSuccess": "¡Gracias por tus comentarios! Lo apreciamos mucho.",
     "feedbackError": "Error al enviar comentarios. Por favor intenta de nuevo.",
     "xpToNext": "{{xp}} XP para el siguiente nivel",
-    "levelUp": "¡Subiste al Nivel {{level}}!"
+    "levelUp": "¡Subiste al Nivel {{level}}!",
+    "sectionAccount": "Cuenta",
+    "sectionContent": "Contenido",
+    "sectionCommunity": "Comunidad",
+    "sectionLegal": "Legal"
   },
   "map": {
     "searchPlaceholder": "Buscar máquinas...",
