feat: redesign badge showcase as thematic merit sash and grid collection (#305)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,6 +155,7 @@
     "feedbackSubmit": "Send Feedback",
     "feedbackSuccess": "Thank you for your feedback! We really appreciate it.",
     "feedbackError": "Failed to send feedback. Please try again.",
+    "badgeSashHint": "Tap a badge for details",
     "xpToNext": "{{xp}} XP to next level",
     "levelUp": "Level Up! You're now Level {{level}}",
     "sectionAccount": "Account",
